--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 
+spring.jpa.defer-datasource-initialization=true
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 
- spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+
+spring.datasource.url=jdbc:mysql://localhost:3306/emp_details
+spring.datasource.username=root
+spring.datasource.password=primesoft
+spring.jpa.hibernate.ddl-auto=create-drop 
+
+
+#spring.datasource.url=jdbc:h2:mem:testdb
